infra/k8s/vessel-weather-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vessel-weather-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vessel-weather
  template:
    metadata:
      labels:
        app: vessel-weather
    spec:
      containers:
        - name: vessel-weather
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          image: banker.azurecr.io/vessel-weather
---
apiVersion: v1
kind: Service
metadata:
  name: vessel-weather-service
spec:
  selector:
    app: vessel-weather
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
