infra/k8s/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: vessel-weather.tracker-service.rs.no
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: vessel-weather-service
              servicePort: 3000
